--- a/.github/workflows/contentful-delete.yml
+++ b/.github/workflows/contentful-delete.yml
@@ -19,13 +19,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install contentful_management
-        pip install python-frontmatter
-        pip install boto3
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
+
     - name: Delete
       env:
         SLUG_TO_DELETE: ${{ github.event.inputs.slugToDelete }}
