--- a/.github/workflows/contentful-upload.yml
+++ b/.github/workflows/contentful-upload.yml
@@ -16,13 +16,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
+
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install contentful_management
-        pip install python-frontmatter
-        pip install boto3
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
+
     - name: Upload
       env:
         # TODO: Change to https://library.optimizely.com/
