Add jupyter and npm artifacts to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,14 @@ artifacts
 
 # IPython
 .ipynb_checkpoints
+.ipython
+.jupyter
+.local
+
+# NPM
+.npm
+.config
+
 
 # Frontend Ignores
 node_modules
